--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="top-header d-none d-sm-flex justify-content-between align-items-center">
                 <div class="contact">
-                    <a href="tel:+1234567890" class="tel"><i class="fa fa-phone" aria-hidden="true"></i>+1234567890</a>
+                    <a href="tel:+1234567890" class="tel"><i class="fa fa-phone" aria-hidden="true"></i>+91 9074341520</a>
                     <a href="mailto:info@yourmail.com"><i class="fa fa-envelope"
                             aria-hidden="true"></i>info@yourmail.com</a>
                 </div>
