--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="contact">
                     <a href="tel:+1234567890" class="tel"><i class="fa fa-phone" aria-hidden="true"></i>+91 9074341520</a>
                     <a href="mailto:info@yourmail.com"><i class="fa fa-envelope"
-                            aria-hidden="true"></i>info@yourmail.com</a>
+                            aria-hidden="true"></i>rahul254771@gmail.com</a>
                 </div>
                 <nav class="d-flex aic">
                     <a href="#" class="login"><i class="fa fa-user" aria-hidden="true"></i>Login</a>
